--- a/css/style.css
+++ b/css/style.css
@@ -3,14 +3,17 @@
 html, body {
   height: 100%;
   min-height: 100%;
+  background-color: black;
 }
 
 body {
-  background: url(../images/backgrounds/architecture.jpg) center no-repeat;
+  background-image: url('/images/backgrounds/architecture.jpg') center;
   background-size: cover;
   background-attachment: fixed;
+  background-repeat: repeat-y;
   font-family: Helvetica, Arial, sans-serif;
   font-size: 100%;
+  width: 1500px;
 }
 
 .wrapper {
@@ -21,27 +24,32 @@ body {
 
 #content {
   padding: 20px;
-  background: rgba(255,255,255,.85);
+  background: rgba(255,255,255,.85) center;
+  margin-left: 250px;
+  background-size: 150px;
+  width: 400px;
+  height: 1150px
 }
 
 h1, h2 {
   font-family: 'Gabriela', serif;
   color: #fff;
+  margin-left: 250px;
 }
 
 h1 {
-  font-size: 3.5em;
+  font-size: 1.7em;
   margin-bottom: 0;
 }
 
 h2 {
-  font-size: 1.5em;
-  margin-top: .5em;
+  font-size: 1em;
+  margin-top: 0em;
 }
 
 h3 {
   font-family: 'Gabriela', serif;
-  font-size: 1.5em;
+  font-size: 1em;
   margin-top: .5em;
 }
 
@@ -52,12 +60,13 @@ img {
 }
 
 p {
-  font-size: 1em;
+  font-size: .5em;
 }
 
 a {
   color: black;
   text-decoration: none;
+  font-size: .5em;
 }
 
 a:hover {
@@ -66,13 +75,13 @@ a:hover {
 
 @media only screen and (max-width: 1042px) {
   .wrapper {
-    width: 80%;
+    width: 120%;
   }
 }
 
 @media only screen and (max-width: 784px) {
   body {
-    font-size: 120%;
+    font-size: 80%;
   }
   h1 {
     font-size: 2.5em;
